GNOME Bugzilla – Bug 662622
A few compiler warnings
Last modified: 2012-10-11 00:24:24 UTC
Hi, byzanz actually failed to build on a few archs. (-Werror=cast-align's warning) You can find the full logs at: https://buildd.debian.org/status/package.php?p=byzanz Thanks in advance, Andrea
Created attachment 225595 [details] [review] Fix FTBFS-because-of-Wcast-align-error-flag I intend to adopt byzanz for Debian. I have attached a patch which fixes the aforementioned issue on Debian.
Byzanz's upstream is not active from what I see, thus I've applied the patch myself. If you plan to maintain the upstream branch as well, let me know. http://git.gnome.org/browse/byzanz/commit/id=c164d2536b1b53fede4e3c1a9c151bb44f284a21
I looked at the warnings on the buildd and tried to make gcc not warn about them. Of course, I don't own a Sparc, so I can't check if all the warnings are gone now (or if my fixes even worked). So it'd be nice if someone could take git master and see if it compiles fine. And if not, report back.
Thanks for including all the patches. I will build a new package from git master and try to find a sponsor who uploads the package to Debian experimental. If it fails again, i'll report back.