gifenc: Fix cast-align warnings

We know that the type is valid guint32-aligned data, so we can safely
cast it. Tell gcc about it.

https://bugzilla.gnome.org/show_bug.cgi?id=662622